--- a/i3/config
+++ b/i3/config
@@ -156,7 +156,7 @@ set $ws4 4:👊😠
 set $ws5 5:🖐😃
 set $ws6 6:🖕😤
 set $ws7 7:💬
-set $ws8 8:🎵
+set $ws8 8:🟢
 set $ws9 9:📥
 
 # switch to workspace
@@ -348,7 +348,7 @@ bar {
         separator  #454947
 
 #                          border  backgr. text
-        focused_workspace  #16a085 #F9FAF9 #292F34
+        focused_workspace  #16a085 #222D31 #292F34
         active_workspace   #595B5B #353836 #FDF6E3
         inactive_workspace #595B5B #222D31 #EEE8D5
         binding_mode       #16a085 #2C2C2C #F9FAF9
