--- a/i3/config
+++ b/i3/config
@@ -338,7 +338,7 @@ bar {
 ## please set your primary output first. Example: 'xrandr --output eDP1 --primary'
 #   tray_output primary
 #   tray_output eDP1
-
+# 595B5B inactive workspace border
     font xft:Noto Sans Mono 14
     strip_workspace_numbers yes
 
@@ -350,7 +350,7 @@ bar {
 #                          border  backgr. text
         focused_workspace  #16a085 #222D31 #292F34
         active_workspace   #595B5B #353836 #FDF6E3
-        inactive_workspace #595B5B #222D31 #EEE8D5
+        inactive_workspace #222D31 #222D31 #EEE8D5
         binding_mode       #16a085 #2C2C2C #F9FAF9
         urgent_workspace   #16a085 #FDF6E3 #E5201D
     }
